# pvs-studio-cmake-examples

./: .gitconfig  .gitignore  .gitmodules  Makefile  PVS-Studio.cmake  README.md  expand_command.cmake
example-1/: CMakeLists.txt
example-10/: CMakeLists.txt  main.cpp
example-11/: CMakeLists.txt
example-12/: CMakeLists.txt  testfile.cpp
example-13/: CMakeLists.txt
example-2/: CMakeLists.txt
example-3/: CMakeLists.txt  main.cpp
example-3/subdir/: CMakeLists.txt  lib.cpp
example-4/: CMakeLists.txt
example-4/subdir/: CMakeLists.txt
example-5/: CMakeLists.txt
example-6/: CMakeLists.txt  main.cpp
example-6/subdir/: CMakeLists.txt  lib.cpp
example-6/subdir/include/: lib6.h
example-6/subdir2/: CMakeLists.txt  lib.cpp
example-6/subdir2/include/: lib6_2.h
example-7/: CMakeLists.txt  README.md  ScopedPtr.h  main.cpp
example-8/: CMakeLists.txt  main.cpp  suppress_base.json
example-9/: CMakeLists.txt
modern-cpp-starter/: README.md
